--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.navLink {
+    @apply hover:text-color-secondary ease-in duration-200;
+}
+
+.btn {
+    @apply bg-color-secondary font-bold rounded-md py-3 px-9 capitalize hover:opacity-80 ease-in duration-200;
+}
